--- a/NodeJs/Dockerfile
+++ b/NodeJs/Dockerfile
@@ -3,7 +3,7 @@ FROM node:13-alpine
 COPY package*.json /usr/app/
 COPY app/* /usr/app/
 
-WORKDIR /usr/app # change root director inside container
+WORKDIR /usr/app
 
 RUN npm install
 CMD ["node", "server.js"]
