--- a/k8s/JavaApp/deployment.yaml
+++ b/k8s/JavaApp/deployment.yaml
@@ -1,3 +1,28 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: java-app
+#   labels:
+#     app: java-app
+# spec:
+#   replicas: 7
+#   selector:
+#     matchLabels:
+#       app: java-app
+#   template:
+#     metadata:
+#       labels:
+#         app: java-app
+#     spec:
+#       containers:
+#         - name: java-app
+#           image: 866308211434.dkr.ecr.us-east-1.amazonaws.com/java-app:1.1
+#           imagePullPolicy: Always
+#           ports:
+#             - containerPort: 8080
+#       # imagePullSecrets:
+#       #   - name: myregistrysecret
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,7 +30,7 @@ metadata:
   labels:
     app: java-app
 spec:
-  replicas: 7
+  replicas: 6
   selector:
     matchLabels:
       app: java-app
@@ -20,5 +45,5 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-      # imagePullSecrets:
-      #   - name: myregistrysecret
+      imagePullSecrets:
+        - name: myregistrysecret
