--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   name: kibana-ingress
 spec:
   rules:
-    - host: a5edae9e6f27b429fa2b8e2bb9da99e2-956675905.us-east-1.elb.amazonaws.com
+    - host: https://6f25fd99-eb39-4b12-a6b7-cd082a259706.eu-central-1.linodelke.net:443
       http:
         paths:
           - path: /* 
